// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LevelSolver /> Matches the current snapshot 1`] = `
<styled.div
  id="level-solver"
>
  <Connect(Component) />
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot when a solution is present 1`] = `
<styled.div
  id="level-solver"
>
  <Connect(Component) />
  <styled.div>
    <ArrowsDisplay
      arrows={
        Array [
          "UP",
          "DOWN",
        ]
      }
      justifyContent="center"
      maxArrowWidth="10%"
    />
  </styled.div>
</styled.div>
`;
